# opencl-learning

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/boxadd/: CMakeLists.txt  boxadd.cl  boxadd.cpp  boxadd.h
src/device-info/: CMakeLists.txt  device.cpp
src/vecadd/: CMakeLists.txt  vecadd.cl  vecadd.cpp
utils/: CMakeLists.txt  utils.cpp  utils.h
